--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,8 +8,8 @@
         <div class="col-md-9">
           <div class="article">
             <div class="well">
-                <h1><a href="{{ site.baseurl}}{{ post.url }}"> {{ post.title }}</a></h1>
-                <p>{{ post.date | date: "%b %-d, %Y" }}</p>
+                <h1><a href="{{ site.baseurl}}{{ page.url }}"> {{ page.title }}</a></h1>
+                <p>{{ page.date | date: "%b %-d, %Y" }}</p>
             {% if site.comments and page.comments %}
                 {% if site.disqus != '' %}
                 <p class="author"><a href="#disqus_thread" data-disqus-identifier="{{ page.url | slugify }}">Comments</a></p>
