--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,13 +10,14 @@
             <div class="well">
                 <h1><a href="{{ site.baseurl}}{{ page.url }}"> {{ page.title }}</a></h1>
                 <p>{{ page.date | date: "%b %-d, %Y" }}</p>
-            {% if site.comments and page.comments %}
+<!--             {% if site.comments and page.comments %}
                 {% if site.disqus != '' %}
                 <p class="author"><a href="#disqus_thread" data-disqus-identifier="{{ page.url | slugify }}">Comments</a></p>
                 {% elsif site.isso != '' %}
                 <p class="author"><a href="{{ site.baseurl }}{{ page.url }}{{ site.isso_suffix }}#isso-thread">Comments</a></p>
                 {% endif %}
-            {% endif %}
+            {% endif %} -->
+                
             <div class="post-content">
             {{ content }}
             </div>
