--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@
         <div class="col-md-9">
           <div class="article">
             <div class="well">
-                <h1><a href="{{ site.baseurl}}{{ page.url }}"> {{ page.title }}</a></h1>
+                <h1 class="title"><a href="{{ site.baseurl}}{{ page.url }}"> {{ page.title }}</a></h1>
                 <p>{{ page.date | date: "%b %-d, %Y" }}</p>
 <!--             {% if site.comments and page.comments %}
                 {% if site.disqus != '' %}
