--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,5 @@
 <div class="sidebar well">
-    {{ site.description }}<br><a href="mailto:mohamed@tcpjunkie.com">Mohamed@tcpjunkie.com</a>
+    {{ site.description }}
 </div>
 
 <div class="sidebar well">
