--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,7 @@
 {% include header.html %}
-
+<head>
+    <title>{{ page.title }} - {{ site.name }}</title>
+</head>
 <div class="container container-left">
     <div class="row">
         <div class="col-md-3 hidden-xs">
