--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    {% if {{ page.title }} != null %}
+    {% if {{ page.title }} != "" %}
     <title>{{ page.title }} | {{ site.name }}</title>
     {% else %}
     <title>{{ site.name }}</title>
