--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,6 @@
 {% include header.html %}
 <head>
-    <title>{{ page.title }} - {{ site.name }}</title>
+    <title>{{ page.title }} | {{ site.name }}</title>
 </head>
 <div class="container container-left">
     <div class="row">
