--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 {% include header.html %}
-
+<title>{{ site.name }}</title></head>
 <div class="container container-left">
     <div class="row">
         <div class="col-md-3 hidden-xs">
